# khartes

./: .gitignore  Gruntfile.js  LICENSE  Main.hs  Main.idr  Makefile  bower.json  khartes.cabal  package.json
tests/: Tests.purs
